# master_thesis_scripts

./: .Rhistory  LICENSE  Makefile  README.md  batch_corrected_coxph.R  master_thesis_scripts.Rproj  matrix_dimension_overview.csv  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
my_master_thesis/: __init__.py  dataset.py  features.py  plots.py
my_master_thesis/modeling/: predict.py  train.py
reports/csv_inspection/: 01CPTAC_OVprospective_Proteome_JHU_20161209_matrix.preview.csv  participant_ids.txt  participant_summary.csv
reports/logs/: coxmos_227228.err  coxmos_227228.out
reports/per_studyQC/: barplot_PDC000110  barplot_PDC000116  barplot_PDC000120  barplot_PDC000125  barplot_PDC000127  barplot_PDC000153  barplot_PDC000204  barplot_PDC000221  barplot_PDC000234  barplot_PDC000270
reports/qc/correlation_csv/: TMT10_PDC000110_REF_correlation_matrix.csv  (+8 more)
reports/tables/: 01_cohort_summary.csv
scr/: list_PDC000120_channels.py
scr/R/: Proteomics QC Pipeline — Full Script.R  RNA_perCancer_matrices.R  TMT10_TMT11nested_clinical_overlap.R  abundance_matrices.R  batch_effect_testing.R  clean_TMT_tibbles.R  combine_clean_clinical.R  create_peptide_intensity_matrices_TMT10_TMT11.R  create_peptide_intensity_matrices_listFormat.R  dimension_ofData.R  export_qs_to_parquet.r  flat_fraction_matrices.R  gene_levelQC.R  master_matrix_creation.R  per_studyQC.R  run_stage6_8.R  test_MBcox.R
scr/python/: 00_count_ref_runs.py  00_list_participants.py  01_process_tmt_psm.py  extract_participant_ids.py  save_csv.py  write_abundance_matrix.py
(+31 files in other folders)
